// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`previews resources 1`] = `
<nav
  className="TabNav"
>
  <span>
    <ul>
      <li>
        <a
          className="tabLink "
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink tabLink--is-selected"
          href="/r/foo/preview"
          onClick={[Function]}
        >
          Preview
        </a>
      </li>
      <li>
        <a
          className="tabLink "
          href="/r/foo/errors"
          onClick={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </span>
</nav>
`;

exports[`shows error pane 1`] = `
<nav
  className="TabNav"
>
  <span>
    <ul>
      <li>
        <a
          className="tabLink "
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink "
          href="/r/foo/preview"
          onClick={[Function]}
        >
          Preview
        </a>
      </li>
      <li>
        <a
          className="tabLink tabLink--is-selected"
          href="/r/foo/errors"
          onClick={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </span>
</nav>
`;

exports[`shows logs 1`] = `
<nav
  className="TabNav"
>
  <span>
    <ul>
      <li>
        <a
          className="tabLink tabLink--is-selected"
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink "
          href="/r/foo/preview"
          onClick={[Function]}
        >
          Preview
        </a>
      </li>
      <li>
        <a
          className="tabLink "
          href="/r/foo/errors"
          onClick={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </span>
</nav>
`;

exports[`shows sail share button 1`] = `
<nav
  className="TabNav"
>
  <span>
    <ul>
      <li>
        <a
          className="tabLink "
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink "
          href="/r/foo/preview"
          onClick={[Function]}
        >
          Preview
        </a>
      </li>
      <li>
        <a
          className="tabLink tabLink--is-selected"
          href="/r/foo/errors"
          onClick={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </span>
  <span
    className="TabNav-spacer"
  >
     
  </span>
  <span
    className="sail-url"
  >
    <button
      type="button"
    >
      Share me!
    </button>
  </span>
</nav>
`;

exports[`shows sail url 1`] = `
<nav
  className="TabNav"
>
  <span>
    <ul>
      <li>
        <a
          className="tabLink "
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink "
          href="/r/foo/preview"
          onClick={[Function]}
        >
          Preview
        </a>
      </li>
      <li>
        <a
          className="tabLink tabLink--is-selected"
          href="/r/foo/errors"
          onClick={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </span>
  <span
    className="TabNav-spacer"
  >
     
  </span>
  <span
    className="sail-url"
  >
    <a
      href="www.sail.dev/xyz"
    >
      Share this view!
    </a>
  </span>
</nav>
`;
